--- a/JournalApp/Views/GroupsWin.xaml
+++ b/JournalApp/Views/GroupsWin.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JournalApp"
         mc:Ignorable="d"
-        Title="Log" Height="450" Width="800">
+        Title="Log" Height="450" Width="800"
+        Loaded="Window_Loaded">
     <Grid>
         <StackPanel>
             <Label Content="Фильтр"/>
